--- a/index.html
+++ b/index.html
@@ -1,13 +1,309 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Review Nhà</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+          integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/app.css">
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
+    <title>Review nhà</title>
 </head>
 <body>
-
+<header class="header">
+    <div class="menu-header" style="padding-left: 55px">
+        <i class="manu-bar fa fa-bars" style="display: none"></i>
+        <a href="#" class="title-header">Mua nhà</a>
+        <a href="#" class="title-header">Thuê nhà</a>
+        <a href="#" class="title-header">Khám Phá</a>
+        <a href="#" class="title-header" style="border-bottom-style: solid;border-bottom-color: #D93C23 ; opacity: 1">Blog</a>
+    </div>
+    <div class="btn-menu-header" style="list-style: none">
+        <ul class="btn-menu-header-ul">
+            <li><i id="btnCloseHeader" class="fa fa-times"></i>
+                <img src="./assets/images/logo.png" class="logo-header-button">
+            </li>
+            <li class="btn-menu-header-li-active"><a href="#" class="btn-menu-header-li-active">Mua nhà</a>
+            </li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Thuê nhà</a></li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Khám phá</a></li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Blog</a></li>
+            <li class="btn-menu-header-li-upload">
+                <a href="#" class="btn-menu-header-li-upload-a">Đăng bài</a>
+            </li>
+            <li class="btn-menu-header-li-loginre">
+                <a class="btn-menu-header-li-loginre-login" href="#">Đăng nhập</a>
+                <a href="#" class="btn-menu-header-li-loginre-re">Đăng ký</a>
+            </li>
+        </ul>
+    </div>
+    <div class="image-div">
+        <img src="./assets/images/logo.png" class="logo-header" alt="logo">
+    </div>
+    <div class="user-header">
+        <div class="btn-upload">
+            <img src="./assets/images/dot.png" class="dot-image" alt="dot">
+            <img src="./assets/images/heart.png" class="heart-image" alt="heart">
+            <button class="button-header">Đăng bài</button>
+        </div>
+        <div class="user">
+            <div class="name-header">
+                <p class="name-user">Vũ Trung Kiên</p>
+                <p class="permisstion-user">Intern PHP</p>
+            </div>
+            <img src="https://image-us.eva.vn/upload/3-2022/images/2022-08-26/image9-1661495587-605-width1631height2048.jpg" class="image-header" alt="user">
+        </div>
+    </div>
+</header>
+<div class="slider">
+    <div class="slide" style="background-image: url(./assets/images/heading.png);">
+        <img src="./assets/images/titleheading.png" class="tieuDe">
+        <img src="./assets/images/silder-content.png" class="noiDung">
+    </div>
+</div>
+<div class="content">
+    <a class="navbar-content color-green-dark" href="/" style="border-radius: 25px;color: aliceblue;">Tất cả</a>
+    <a class="navbar-content" href="xahoi.html">Xã hội</a>
+    <a class="navbar-content" href="xahoi.html">Nhà đất</a>
+    <a class="navbar-content" href="xahoi.html">Đời sống</a>
+    <a class="navbar-content" href="xahoi.html">Video</a>
+</div>
+<div>
+    <div class="tintuc">
+        <div class="tintuc-img-content">
+            <img src="./assets/images/tintuc/tintuc.png" class="tintuc-img">
+            <p class="tintuc-content">Tin tức</p>
+        </div>
+    </div>
+    <div class="content-tintuc">
+        <a href="detail.html" class="content-tintuc-l">
+            <img src="./assets/images/tintuc/img1.png" class="content-tintuc-l-img">
+            <p class="content-tintuc-content">Making a Housing Wage: Where Teachers, First Responders and Restaurant
+                Workers Can Live Where They Work</p>
+            <div class="content-tintuc-l-des">
+                <p class="content-tintuc-xahoi">Xã hội</p>
+                <p class="content-tintuc-dot"></p>
+                <p class="content-tintuc-name">Vũ Trung Kiên</p>
+                <p class="content-tintuc-dot"></p>
+                <p class="content-tintuc-des">24/02/2020</p>
+            </div>
+            <p class="content-tintuc-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                vitae...</p>
+        </a>
+        <div class="content-tintuc-r">
+            <a href="detail.html" class="content-tintuc-r-mini">
+                <img class="content-tintuc-r-img" src="./assets/images/tintuc/img2.png">
+                <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
+                <div class="content-tintuc-r-des">
+                    <p class="content-tintuc-xahoi">Xã hội</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-name">Vũ Trung Kiên</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-des">24/02/2020</p>
+                </div>
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Sit diam at feugiat
+                    purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                    vitae...</p>
+            </a>
+            <a href="detail.html" class="content-tintuc-r-mini">
+                <img class="content-tintuc-r-img" src="./assets/images/tintuc/img3.png">
+                <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
+                <div class="content-tintuc-r-des">
+                    <p class="content-tintuc-xahoi">Xã hội</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-name">Vũ Trung Kiên</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-des">24/02/2020</p>
+                </div>
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Sit diam at feugiat
+                    purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                    vitae...</p>
+            </a>
+        </div>
+    </div>
+    <div class="content-video">
+        <div class="content-video-title">
+            <p class="content-video-title-v">Video</p>
+            <p class="content-video-title-all">Xem tất cả</p>
+        </div>
+        <div class="content-video-video">
+            <div class="content-video-video-tamgiac" style="background-image: url(./assets/images/video/video1.png);">
+                <a href="detail.html" class="content-video-video-l">
+                    <div class="content-video-video-l-heart">
+                        <img src="./assets/images/video/heart.png" class="content-video-video-l-heart-img">
+                    </div>
+                    <div class="content-video-video-l-tron-div">
+                        <div class="content-video-video-l-tron" style="background-image: url(./assets/images/video/tron.png);">
+                            <img src="./assets/images/video/tamgiac.png" class="content-video-video-l-video">
+                        </div>
+                    </div>
+                    <div class="content-video-video-l-des" style="background-image: url(./assets/images/video/boderbox.png);">
+                        <p class="content-video-video-l-des-text">Đi dạo cạnh đường cao tốc Pháp Vân Cầu Giẽ ổn
+                            không?</p>
+                        <div class="content-video-video-l-des-viewdate">
+                            <p class="content-video-video-l-des-view">5542 lượt xem</p>
+                            <p class="content-tintuc-dot" style="background-color: aliceblue"></p>
+                            <p class="content-video-video-l-des-date">24/02/2020</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="content-video-video-r">
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video2.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video2.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="detail.html" class="content-video-video-r-r">
+                    <img src="./assets/images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="content-video-list">
+            <p class="content-video-list-title">Danh sách tin</p>
+            <a class="content-video-list-content" href="detail.html">
+                <img src="./assets/images/list/img1.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Vũ Trung Kiên</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
+                </div>
+            </a>
+            <a class="content-video-list-content" href="detail.html">
+                <img src="./assets/images/list/img2.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Vũ Trung Kiên</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
+                </div>
+            </a>
+            <a class="content-video-list-content" href="detail.html">
+                <img src="./assets/images/list/img3.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Vũ Trung Kiên</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
+                </div>
+            </a>
+            <a class="content-video-list-content" href="detail.html">
+                <img src="./assets/images/list/img4.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Vũ Trung Kiên</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
+                </div>
+            </a>
+            <div class="content-video-list-xemthem">
+                <a href="#" class="content-video-list-xemthem-a">Xem thêm</a>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="./assets/js/jquery-3.6.0.min.js"></script>
 </body>
 </html>
